--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,10 @@
 PORT=5000
 MONGO_URI=your_mongodb_connection_string_here
 NODE_ENV=development
+JWT_SECRET=superlongrandomsecret
+TOKEN_TTL=7d
+
+# Optional bootstrap admin (first run only)
+ADMIN_NAME=HR Admin
+ADMIN_EMAIL=hr@example.com
+ADMIN_PASSWORD=ChangeMe@123
