--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,12 @@
     "start": "node src/server.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^8.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "zod": "^3.23.8"
   },
